demo code/MFC (VC++)/DLBT/DLBT.h


enum DLBT_DOWNLOAD_STATE
{
	BTDS_QUEUED,	                
	BTDS_CHECKING_FILES,	        
	BTDS_DOWNLOADING_TORRENT,	    
	BTDS_DOWNLOADING,	            
    BTDS_PAUSED,                    
	BTDS_FINISHED,	                
	BTDS_SEEDING,	                
	BTDS_ALLOCATING,                
    BTDS_ERROR,                     
};
DLBT_API void WINAPI DLBT_Downloader_AddHttpDownload (HANDLE hDownloader, LPSTR url);
DLBT_API void WINAPI DLBT_Downloader_RemoveHttpDownload (HANDLE hDownloader, LPSTR url);
DLBT_API void WINAPI DLBT_Downloader_SetMaxSessionPerHttp (HANDLE hDownloader, int limit);
DLBT_API void WINAPI DLBT_Downloader_GetHttpConnections(HANDLE hDownloader, LPSTR ** urls, int * urlCount);
DLBT_API void WINAPI DLBT_Downloader_FreeConnections(LPSTR * urls, int urlCount);
DLBT_API void WINAPI DLBT_Downloader_AddTracker (HANDLE hDownloader, LPCSTR url, int tier);
DLBT_API void WINAPI DLBT_Downloader_RemoveAllTracker (HANDLE hDownloader);
DLBT_API void WINAPI DLBT_Downloader_AddHttpTrackerExtraParams (HANDLE hDownloader, LPCSTR extraParams);
DLBT_API void WINAPI DLBT_Downloader_SetDownloadSequence (HANDLE hDownloader, BOOL ifSeq = FALSE);
DLBT_API DLBT_DOWNLOAD_STATE WINAPI DLBT_Downloader_GetState (HANDLE hDownloader);
DLBT_API BOOL WINAPI DLBT_Downloader_IsPaused (HANDLE hDownloader);
DLBT_API void WINAPI DLBT_Downloader_Pause (HANDLE hDownloader);        
DLBT_API void WINAPI DLBT_Downloader_Resume (HANDLE hDownloader);       
DLBT_API HRESULT WINAPI DLBT_Downloader_GetLastError (
    HANDLE  hDownloader,  
    LPSTR   pBuffer,      
    int *   pBufferSize  
    );
DLBT_API void WINAPI DLBT_Downloader_ResumeInError (HANDLE hDownloader); 
DLBT_API BOOL WINAPI DLBT_Downloader_IsHaveTorrentInfo (HANDLE hDownloader); 
DLBT_API HRESULT WINAPI DLBT_Downloader_MakeURL (  
    HANDLE      hDownloader,
    LPSTR       pBuffer,                
    int  *      pBufferSize             
    );
DLBT_API HRESULT WINAPI DLBT_Downloader_SaveTorrentFile (HANDLE hDownloader, LPCWSTR filePath, LPCSTR password = NULL);
DLBT_API void WINAPI DLBT_Downloader_SetDownloadLimit (HANDLE hDownloader, int limit);
DLBT_API void WINAPI DLBT_Downloader_SetUploadLimit (HANDLE hDownloader, int limit);
DLBT_API void WINAPI DLBT_Downloader_SetMaxUploadConnections (HANDLE hDownloader, int limit);
DLBT_API void WINAPI DLBT_Downloader_SetMaxTotalConnections (HANDLE hDownloader, int limit);
DLBT_API void WINAPI DLBT_Downloader_SetOnlyUpload (HANDLE hDownloader, bool bUpload);
DLBT_API void WINAPI DLBT_Downloader_SetServerDownloadLimit(HANDLE hDownloader, int limit);
DLBT_API void WINAPI DLBT_Downloader_BanServerDownload(HANDLE hDownloader, bool bBan);
DLBT_API void WINAPI DLBT_Downloader_SetShareRateLimit (HANDLE hDownloader, float fRate);
DLBT_API double WINAPI DLBT_Downloader_GetShareRate (HANDLE hDownloader);
DLBT_API HRESULT WINAPI DLBT_Downloader_GetTorrentName (
    HANDLE      hDownloader,
    LPWSTR      pBuffer,        
    int     *   pBufferSize     
    );
DLBT_API UINT64 WINAPI DLBT_Downloader_GetTotalFileSize (HANDLE hDownloader);
DLBT_API UINT64 WINAPI DLBT_Downloader_GetTotalWanted (HANDLE hDownloader);     
DLBT_API UINT64 WINAPI DLBT_Downloader_GetTotalWantedDone (HANDLE hDownloader); 
DLBT_API float WINAPI DLBT_Downloader_GetProgress (HANDLE hDownloader);
DLBT_API UINT64 WINAPI DLBT_Downloader_GetDownloadedBytes (HANDLE hDownloader);
DLBT_API UINT64 WINAPI DLBT_Downloader_GetUploadedBytes (HANDLE hDownloader);
DLBT_API UINT WINAPI DLBT_Downloader_GetDownloadSpeed (HANDLE hDownloader);
DLBT_API UINT WINAPI DLBT_Downloader_GetUploadSpeed (HANDLE hDownloader);
DLBT_API void WINAPI DLBT_Downloader_GetPeerNums (
    HANDLE      hDownloader,        
    int     *   connectedCount,     
    int     *   totalSeedCount,     
    int     *   seedsConnected,     
    int     *   inCompleteCount,    
    int     *   totalCurrentSeedCount, 
    int     *   totalCurrentPeerCount  
    );
DLBT_API int WINAPI DLBT_Downloader_GetFileCount (HANDLE hDownloader);
DLBT_API UINT64 WINAPI DLBT_Downloader_GetFileSize (HANDLE hDownloader, int index);
DLBT_API UINT64 WINAPI DLBT_Downloader_GetFileOffset (HANDLE hDownloader, int index);
DLBT_API BOOL WINAPI DLBT_Downloader_IsPadFile (HANDLE hDownloader, int index);
DLBT_API HRESULT WINAPI DLBT_Downloader_GetFilePathName (
    HANDLE      hDownloader,        
    int         index,              
    LPWSTR      pBuffer,            
    int     *   pBufferSize,        
    bool        needFullPath = false
    );
DLBT_API HRESULT WINAPI DLBT_Downloader_DeleteUnRelatedFiles (HANDLE hDownloader);
DLBT_API HRESULT WINAPI DLBT_Downloader_GetFileHash (
	HANDLE      hDownloader,        
	int         index,              
	LPSTR       pBuffer,            
	int     *   pBufferSize         
	);
DLBT_API float WINAPI DLBT_Downloader_GetFileProgress (HANDLE hDownloader, int index);
enum DLBT_FILE_PRIORITIZE
{
    DLBT_FILE_PRIORITY_CANCEL        =   0,     
    DLBT_FILE_PRIORITY_NORMAL,                  
    DLBT_FILE_PRIORITY_ABOVE_NORMAL,            
    DLBT_FILE_PRIORITY_MAX                      
};
DLBT_API HRESULT WINAPI DLBT_Downloader_SetFilePrioritize (
    HANDLE                  hDownloader,
    int                     index,              
    DLBT_FILE_PRIORITIZE    prioritize,         
    BOOL                    bDoPriority = TRUE  
    );
DLBT_API void WINAPI DLBT_Downloader_ApplyPrioritize (HANDLE hDownloader);
DLBT_API HRESULT WINAPI DLBT_Downloader_GetPiecesStatus (
    HANDLE                  hDownloader,    
    bool                *   pieceArray,     
    int                     arrayLength,    
    int                 *   pieceDownloaded 
    );
DLBT_API HRESULT WINAPI DLBT_Downloader_SetPiecePrioritize (
    HANDLE                  hDownloader,
    int                     index,              
    DLBT_FILE_PRIORITIZE    prioritize,         
    BOOL                    bDoPriority = TRUE  
    );
DLBT_API void WINAPI DLBT_Downloader_AddPeerSource (HANDLE hDownloader, char * ip, USHORT port);
DLBT_API HRESULT WINAPI DLBT_Downloader_GetInfoHash (
    HANDLE      hDownloader,        
    LPSTR       pBuffer,            
    int     *   pBufferSize         
    );
DLBT_API int WINAPI DLBT_Downloader_GetPieceCount (HANDLE hDownloader);
DLBT_API int WINAPI DLBT_Downloader_GetPieceSize (HANDLE hDownloader);
DLBT_API void WINAPI DLBT_Downloader_SaveStatusFile (HANDLE hDownloader);
DLBT_API void WINAPI DLBT_Downloader_SetStatusFileMode (HANDLE hDownloader, BOOL bOnlyPieceStatus);
DLBT_API BOOL WINAPI DLBT_Downloader_IsSavingStatus (HANDLE hDownloader);
DLBT_API HRESULT WINAPI DLBT_Downloader_AddPartPieceData(HANDLE hDownloader, UINT64 offset, UINT64 size, char *data);
DLBT_API HRESULT WINAPI DLBT_Downloader_AddPieceData(
    HANDLE                  hDownloader,
    int                     piece,          
    char            *       data,           
    bool                    bOverWrite      
    );
enum DLBT_TORRENT_TYPE
{
    USE_PUBLIC_DHT_NODE     = 0,    
    NO_USE_PUBLIC_DHT_NODE,         
    ONLY_USE_TRACKER,               
};
DLBT_API HANDLE WINAPI DLBT_CreateTorrent (
    int             pieceSize,      
    LPCWSTR         file,           
    LPCWSTR         publisher = NULL,   
    LPCWSTR         publisherUrl = NULL, 
    LPCWSTR         comment = NULL,  
    DLBT_TORRENT_TYPE torrentType = USE_PUBLIC_DHT_NODE,   
    int       *     nPercent = NULL,  
    BOOL      *     bCancel = NULL,   
	int			    minPadFileSize = -1,  
    BOOL            bUpdateExt = FALSE  
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_AddTracker (
    HANDLE      hTorrent,       
    LPCWSTR     trackerURL,     
    int         tier            
    );
DLBT_API void WINAPI DLBT_Torrent_RemoveAllTracker (HANDLE hTorrent);
DLBT_API void WINAPI DLBT_Torrent_AddHttpUrl (HANDLE hTorrent, LPCWSTR httpUrl);
DLBT_API HRESULT WINAPI DLBT_SaveTorrentFile (
    HANDLE      hTorrent,               
    LPCWSTR     filePath,               
    LPCSTR      password = NULL,        
    BOOL        bUseHashName = FALSE,   
    LPCWSTR     extName = NULL          
    );
DLBT_API void WINAPI DLBT_ReleaseTorrent (HANDLE hTorrent);
DLBT_API HANDLE WINAPI DLBT_OpenTorrent (
    LPCWSTR     torrentFile,    
    LPCSTR      password = NULL                 
    );
DLBT_API HANDLE WINAPI DLBT_OpenTorrentFromBuffer (
    LPBYTE      torrentFile,                    
    DWORD       dwTorrentFileSize,              
    LPCSTR      password = NULL                 
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_GetComment (
    HANDLE      hTorrent,       
    LPWSTR      pBuffer,        
    int     *   pBufferSize     
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_GetCreator (
    HANDLE      hTorrent,       
    LPWSTR      pBuffer,        
    int     *   pBufferSize     
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_GetPublisher (
    HANDLE      hTorrent,       
    LPWSTR      pBuffer,        
    int     *   pBufferSize     
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_GetPublisherUrl (
    HANDLE      hTorrent,       
    LPWSTR      pBuffer,        
    int     *   pBufferSize     
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_MakeURL (  
    HANDLE      hTorrent,
    LPSTR       pBuffer,                
    int  *      pBufferSize             
    );
DLBT_API int WINAPI DLBT_Torrent_GetTrackerCount (HANDLE hTorrent);
DLBT_API LPCSTR WINAPI DLBT_Torrent_GetTrackerUrl (
    HANDLE      hTorrent,       
    int         index           
    );
DLBT_API UINT64 WINAPI DLBT_Torrent_GetTotalFileSize (HANDLE hTorrent);
DLBT_API int WINAPI DLBT_Torrent_GetFileCount (HANDLE hTorrent);
DLBT_API BOOL WINAPI DLBT_Torrent_IsPadFile (HANDLE hTorrent, int index);
DLBT_API UINT64 WINAPI DLBT_Torrent_GetFileSize (
    HANDLE      hTorrent,           
    int         index               
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_GetFilePathName (
    HANDLE      hTorrent,           
    int         index,              
    LPWSTR      pBuffer,            
    int     *   pBufferSize        
    );
DLBT_API int WINAPI DLBT_Torrent_GetPieceCount (HANDLE hTorrent);
DLBT_API int WINAPI DLBT_Torrent_GetPieceSize (HANDLE hTorrent);
DLBT_API HRESULT WINAPI DLBT_Torrent_GetPieceInfoHash (
    HANDLE      hTorrent,           
    int         index,              
    LPSTR       pBuffer,            
    int     *   pBufferSize         
    );
DLBT_API HRESULT WINAPI DLBT_Torrent_GetInfoHash (
    HANDLE      hTorrent,           
    LPSTR       pBuffer,            
    int     *   pBufferSize         
    );
enum PORT_TYPE
{
    TCP_PORT        = 1,            
    UDP_PORT                        
};
DLBT_API BOOL WINAPI DLBT_AddAppToWindowsXPFirewall (
    LPCWSTR      appFilePath,        
    LPCWSTR      ruleName            
    );
DLBT_API void WINAPI DLBT_AddUPnPPortMapping(
	USHORT      nExternPort,        
	USHORT      nLocalPort,         
	PORT_TYPE   nPortType,          
	LPCSTR      appName             
	);
DLBT_API DWORD WINAPI DLBT_GetCurrentXPLimit ();
DLBT_API BOOL WINAPI DLBT_ChangeXPConnectionLimit (DWORD num);
struct KERNEL_INFO
{
    USHORT                      port;                           
    BOOL                        dhtStarted;                     
    int                         totalDownloadConnectionCount;   
    int                         downloadCount;                  
    int                         totalDownloadSpeed;             
    int                         totalUploadSpeed;               
    UINT64                      totalDownloadedByteCount;       
    UINT64                      totalUploadedByteCount;         
    int                         peersNum;                       
    int                         dhtConnectedNodeNum;            
    int                         dhtCachedNodeNum;               
    int                         dhtTorrentNum;                  
};
struct DOWNLOADER_INFO
{
    DLBT_DOWNLOAD_STATE          state;                         
    float                       percentDone;                    
    int                         downConnectionCount;            
    int                         downloadLimit;                  
    int                         connectionCount;                
    int                         totalCompletedSeeds;            
    int                         inCompleteNum;                  
    int                         seedConnected;                  
    int                         totalCurrentSeedCount;          
    int                         totalCurrentPeerCount;          
    float                       currentTaskProgress;            
    BOOL                        bReleasingFiles;                
    UINT                        downloadSpeed;                  
    UINT                        uploadSpeed;                    
    UINT                        serverPayloadSpeed;             
    UINT                        serverTotalSpeed;               
    UINT64                      wastedByteCount;                
    UINT64                      totalDownloadedBytes;           
    UINT64                      totalUploadedBytes;             
    UINT64                      totalWantedBytes;               
    UINT64                      totalWantedDoneBytes;           
    UINT64                      totalServerPayloadBytes;        
    UINT64                      totalServerBytes;               
    UINT64                      totalPayloadBytesDown;          
    UINT64                      totalBytesDown;                 
    BOOL                        bHaveTorrent;                   
    UINT64                      totalFileSize;                  
    UINT64                      totalFileSizeExcludePadding;    
    UINT64                      totalPaddingSize;               
    int                         pieceCount;                     
    int                         pieceSize;                      
    char                        infoHash [256];                 
};
struct PEER_INFO
{
    int                         count;                          
    PEER_INFO_ENTRY             entries [1];                    
};
DLBT_API HRESULT WINAPI DLBT_GetKernelInfo (KERNEL_INFO * info);
DLBT_API HRESULT WINAPI DLBT_GetDownloaderInfo (HANDLE hDownloader, DOWNLOADER_INFO * info);
DLBT_API HRESULT WINAPI DLBT_GetDownloaderPeerInfoList (HANDLE hDownloader, PEER_INFO ** ppInfo);
DLBT_API void WINAPI DLBT_FreeDownloaderPeerInfoList (PEER_INFO * pInfo);
DLBT_API void WINAPI DLBT_SetDHTFilePathName (LPCWSTR dhtFile);
DLBT_API void WINAPI DLBT_Set_IO_OP(void * op);
DLBT_API void WINAPI DLBT_InitDefault_IO_OP(void * op);
DLBT_API void * WINAPI DLBT_Get_IO_OP();
DLBT_API void * WINAPI DLBT_Get_RAW_IO_OP();