demo code/Delphi/dlbt.pas


  procedure DLBT_Downloader_AddHttpDownload; stdcall; external DLBT_Library name 'DLBT_Downloader_AddHttpDownload';
  procedure DLBT_Downloader_RemoveHttpDownload; stdcall; external DLBT_Library name 'DLBT_Downloader_RemoveHttpDownload';
  procedure DLBT_Downloader_SetMaxSessionPerHttp; stdcall; external DLBT_Library name 'DLBT_Downloader_SetMaxSessionPerHttp';
  procedure DLBT_Downloader_GetHttpConnections; stdcall; external DLBT_Library name 'DLBT_Downloader_GetHttpConnections';
  procedure DLBT_Downloader_FreeConnections; stdcall; external DLBT_Library name 'DLBT_Downloader_FreeConnections';
  procedure DLBT_Downloader_AddTracker; stdcall; external DLBT_Library name 'DLBT_Downloader_AddTracker';
  procedure DLBT_Downloader_RemoveAllTracker; stdcall; external DLBT_Library name 'DLBT_Downloader_RemoveAllTracker';
  procedure DLBT_Downloader_AddHttpTrackerExtraParams; stdcall; external DLBT_Library name 'DLBT_Downloader_AddHttpTrackerExtraParams';
  procedure DLBT_Downloader_SetDownloadSequence; stdcall; external DLBT_Library name 'DLBT_Downloader_SetDownloadSequence';
  function  DLBT_Downloader_GetState; stdcall; external DLBT_Library name 'DLBT_Downloader_GetState';
  function  DLBT_Downloader_IsPaused; stdcall; external DLBT_Library name 'DLBT_Downloader_IsPaused';
  procedure DLBT_Downloader_Pause; stdcall; external DLBT_Library name 'DLBT_Downloader_Pause';
  procedure DLBT_Downloader_Resume; stdcall; external DLBT_Library name 'DLBT_Downloader_Resume';
  function  DLBT_Downloader_GetLastError; stdcall; external DLBT_Library name 'DLBT_Downloader_GetLastError';
  procedure DLBT_Downloader_ResumeInError; stdcall; external DLBT_Library name 'DLBT_Downloader_ResumeInError';
  function  DLBT_Downloader_IsHaveTorrentInfo; stdcall; external DLBT_Library name 'DLBT_Downloader_IsHaveTorrentInfo';
  function  DLBT_Downloader_MakeURL; stdcall; external DLBT_Library name 'DLBT_Downloader_MakeURL';
  function  DLBT_Downloader_SaveTorrentFile; stdcall; external DLBT_Library name 'DLBT_Downloader_SaveTorrentFile';
  procedure DLBT_Downloader_SetDownloadLimit; stdcall; external DLBT_Library name 'DLBT_Downloader_SetDownloadLimit';
  procedure DLBT_Downloader_SetUploadLimit; stdcall; external DLBT_Library name 'DLBT_Downloader_SetUploadLimit';
  procedure DLBT_Downloader_SetMaxUploadConnections; stdcall; external DLBT_Library name 'DLBT_Downloader_SetMaxUploadConnections';
  procedure DLBT_Downloader_SetMaxTotalConnections; stdcall; external DLBT_Library name 'DLBT_Downloader_SetMaxTotalConnections';
  procedure DLBT_Downloader_SetOnlyUpload; stdcall; external DLBT_Library name 'DLBT_Downloader_SetOnlyUpload';  
  procedure DLBT_Downloader_SetServerDownloadLimit; stdcall; external DLBT_Library name 'DLBT_Downloader_SetServerDownloadLimit';
  procedure DLBT_Downloader_BanServerDownload; stdcall; external DLBT_Library name 'DLBT_Downloader_BanServerDownload';
  procedure DLBT_Downloader_SetShareRateLimit; stdcall; external DLBT_Library name 'DLBT_Downloader_SetShareRateLimit';
  function  DLBT_Downloader_GetShareRate; stdcall; external DLBT_Library name 'DLBT_Downloader_GetShareRate';
  function  DLBT_Downloader_GetTorrentName; stdcall; external DLBT_Library name 'DLBT_Downloader_GetTorrentName';
  function  DLBT_Downloader_GetTotalFileSize; stdcall; external DLBT_Library name 'DLBT_Downloader_GetTotalFileSize';  
  function DLBT_Downloader_GetTotalWanted; stdcall; external DLBT_Library name 'DLBT_Downloader_GetTotalWanted';
  function DLBT_Downloader_GetTotalWantedDone; stdcall; external DLBT_Library name 'DLBT_Downloader_GetTotalWantedDone';
  function  DLBT_Downloader_GetProgress; stdcall; external DLBT_Library name 'DLBT_Downloader_GetProgress';
  function  DLBT_Downloader_GetDownloadedBytes; stdcall; external DLBT_Library name 'DLBT_Downloader_GetDownloadedBytes';
  function  DLBT_Downloader_GetUploadedBytes; stdcall; external DLBT_Library name 'DLBT_Downloader_GetUploadedBytes';
  function  DLBT_Downloader_GetDownloadSpeed; stdcall; external DLBT_Library name 'DLBT_Downloader_GetDownloadSpeed';
  function  DLBT_Downloader_GetUploadSpeed; stdcall; external DLBT_Library name 'DLBT_Downloader_GetUploadSpeed';
  procedure DLBT_Downloader_GetPeerNums; stdcall; external DLBT_Library name 'DLBT_Downloader_GetPeerNums';
  function  DLBT_Downloader_GetFileCount; stdcall; external DLBT_Library name 'DLBT_Downloader_GetFileCount';
  function  DLBT_Downloader_GetFileSize; stdcall; external DLBT_Library name 'DLBT_Downloader_GetFileSize';
  function  DLBT_Downloader_GetFileOffset; stdcall; external DLBT_Library name 'DLBT_Downloader_GetFileOffset';
  function  DLBT_Downloader_IsPadFile; stdcall; external DLBT_Library name 'DLBT_Downloader_IsPadFile';
  function  DLBT_Downloader_GetFilePathName; stdcall; external DLBT_Library name 'DLBT_Downloader_GetFilePathName';
  function DLBT_Downloader_DeleteUnRelatedFiles; stdcall; external DLBT_Library name 'DLBT_Downloader_DeleteUnRelatedFiles';
  function DLBT_Downloader_GetFileHash; stdcall; external DLBT_Library name 'DLBT_Downloader_GetFileHash';
  function  DLBT_Downloader_GetFileProgress; stdcall; external DLBT_Library name 'DLBT_Downloader_GetFileProgress';
  function DLBT_Downloader_SetFilePrioritize; stdcall; external DLBT_Library name 'DLBT_Downloader_SetFilePrioritize';
  procedure DLBT_Downloader_ApplyPrioritize; stdcall; external DLBT_Library name 'DLBT_Downloader_ApplyPrioritize';
  function DLBT_Downloader_GetPiecesStatus; stdcall; external DLBT_Library name 'DLBT_Downloader_GetPiecesStatus';
  function DLBT_Downloader_SetPiecePrioritize; stdcall; external DLBT_Library name 'DLBT_Downloader_SetPiecePrioritize';
  procedure DLBT_Downloader_AddPeerSource; stdcall; external DLBT_Library name 'DLBT_Downloader_AddPeerSource';
  function  DLBT_Downloader_GetInfoHash; stdcall; external DLBT_Library name 'DLBT_Downloader_GetInfoHash';
  function  DLBT_Downloader_GetPieceCount; stdcall; external DLBT_Library name 'DLBT_Downloader_GetPieceCount';
  function  DLBT_Downloader_GetPieceSize; stdcall; external DLBT_Library name 'DLBT_Downloader_GetPieceSize';
  procedure DLBT_Downloader_SaveStatusFile; stdcall; external DLBT_Library name 'DLBT_Downloader_SaveStatusFile';
  procedure DLBT_Downloader_SetStatusFileMode; stdcall; external DLBT_Library name 'DLBT_Downloader_SetStatusFileMode';
  function DLBT_Downloader_IsSavingStatus; stdcall; external DLBT_Library name 'DLBT_Downloader_IsSavingStatus';
  function DLBT_Downloader_AddPartPieceData; stdcall; external DLBT_Library name 'DLBT_Downloader_AddPartPieceData';
  function DLBT_Downloader_AddPieceData; stdcall; external DLBT_Library name 'DLBT_Downloader_AddPieceData';

  function  DLBT_CreateTorrent; stdcall; external DLBT_Library name 'DLBT_CreateTorrent';
  function  DLBT_Torrent_AddTracker; stdcall; external DLBT_Library name 'DLBT_Torrent_AddTracker';
  procedure DLBT_Torrent_RemoveAllTracker; stdcall; external DLBT_Library name 'DLBT_Torrent_RemoveAllTracker';
  procedure DLBT_Torrent_AddHttpUrl; stdcall; external DLBT_Library name 'DLBT_Torrent_AddHttpUrl';
  function  DLBT_SaveTorrentFile; stdcall; external DLBT_Library name 'DLBT_SaveTorrentFile';
  procedure DLBT_ReleaseTorrent; stdcall; external DLBT_Library name 'DLBT_ReleaseTorrent';

  function  DLBT_OpenTorrent; stdcall; external DLBT_Library name 'DLBT_OpenTorrent';
  function  DLBT_OpenTorrentFromBuffer; stdcall; external DLBT_Library name 'DLBT_OpenTorrentFromBuffer';
  function  DLBT_Torrent_GetComment; stdcall; external DLBT_Library name 'DLBT_Torrent_GetComment';
  function  DLBT_Torrent_GetCreator; stdcall; external DLBT_Library name 'DLBT_Torrent_GetCreator';
  function  DLBT_Torrent_GetPublisher; stdcall; external DLBT_Library name 'DLBT_Torrent_GetPublisher';
  function  DLBT_Torrent_GetPublisherUrl; stdcall; external DLBT_Library name 'DLBT_Torrent_GetPublisherUrl';
  function  DLBT_Torrent_MakeURL; stdcall; external DLBT_Library name 'DLBT_Torrent_MakeURL';
  function  DLBT_Torrent_GetTrackerCount; stdcall; external DLBT_Library name 'DLBT_Torrent_GetTrackerCount';
  function  DLBT_Torrent_GetTrackerUrl; stdcall; external DLBT_Library name 'DLBT_Torrent_GetTrackerUrl';
  function  DLBT_Torrent_GetTotalFileSize; stdcall; external DLBT_Library name 'DLBT_Torrent_GetTotalFileSize';
  function  DLBT_Torrent_GetFileCount; stdcall; external DLBT_Library name 'DLBT_Torrent_GetFileCount';
  function  DLBT_Torrent_IsPadFile; stdcall; external DLBT_Library name 'DLBT_Torrent_IsPadFile';
  function  DLBT_Torrent_GetFileSize; stdcall; external DLBT_Library name 'DLBT_Torrent_GetFileSize';
  function  DLBT_Torrent_GetFilePathName; stdcall; external DLBT_Library name 'DLBT_Torrent_GetFilePathName';
  function  DLBT_Torrent_GetPieceCount; stdcall; external DLBT_Library name 'DLBT_Torrent_GetPieceCount';
  function  DLBT_Torrent_GetPieceSize; stdcall; external DLBT_Library name 'DLBT_Torrent_GetPieceSize';
  function  DLBT_Torrent_GetPieceInfoHash; stdcall; external DLBT_Library name 'DLBT_Torrent_GetPieceInfoHash';
  function  DLBT_Torrent_GetInfoHash; stdcall; external DLBT_Library name 'DLBT_Torrent_GetInfoHash';

  function  DLBT_AddAppToWindowsXPFirewall; stdcall; external DLBT_Library name 'DLBT_AddAppToWindowsXPFirewall';
  procedure DLBT_AddUPnPPortMapping; stdcall; external DLBT_Library name 'DLBT_AddUPnPPortMapping';
  function  DLBT_GetCurrentXPLimit; stdcall; external DLBT_Library name 'DLBT_GetCurrentXPLimit';
  function  DLBT_ChangeXPConnectionLimit; stdcall; external DLBT_Library name 'DLBT_ChangeXPConnectionLimit';
  function  DLBT_GetKernelInfo; stdcall; external DLBT_Library name 'DLBT_GetKernelInfo';
  function  DLBT_GetDownloaderInfo; stdcall; external DLBT_Library name 'DLBT_GetDownloaderInfo';
  function  DLBT_GetDownloaderPeerInfoList; stdcall; external DLBT_Library name 'DLBT_GetDownloaderPeerInfoList';
  procedure DLBT_FreeDownloaderPeerInfoList; stdcall; external DLBT_Library name 'DLBT_FreeDownloaderPeerInfoList';

  procedure  DLBT_SetDHTFilePathName; stdcall; external DLBT_Library name 'DLBT_SetDHTFilePathName';

  procedure  DLBT_Set_IO_OP; stdcall; external DLBT_Library name 'DLBT_Set_IO_OP';
  procedure  DLBT_InitDefault_IO_OP; stdcall; external DLBT_Library name 'DLBT_InitDefault_IO_OP';
  function   DLBT_Get_IO_OP; stdcall; external DLBT_Library name 'DLBT_Get_IO_OP';
  function   DLBT_Get_RAW_IO_OP; stdcall; external DLBT_Library name 'DLBT_Get_RAW_IO_OP';

  
end.